--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "scripts": {
     "test": "mocha --opts mocha.opts",
     "pretest": "npm run build",
-    "build": "rm -rf dist && rollup -c",
+    "build": "rollup -c",
     "prepare": "npm run build",
     "dev": "rollup -cw",
     "prepublishOnly": "npm test",
