--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "http-link-header": "^1.0.2",
     "shimport": "^1.0.1",
     "sourcemap-codec": "^1.4.6",
-    "string-hash": "^1.1.3"
-  },
-  "devDependencies": {
+    "string-hash": "^1.1.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "=8",
     "@types/puppeteer": "^1.19.0",
@@ -59,6 +57,8 @@
     "webpack": "^4.38.0",
     "webpack-format-messages": "^2.0.5",
     "yootils": "0.0.16"
+  },
+  "devDependencies": {
   },
   "peerDependencies": {
     "svelte": "^3.5.0"
