npx rollup on build

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "scripts": {
     "test": "mocha --opts mocha.opts",
     "pretest": "npm run build",
-    "build": "rm -rf dist && rollup -c",
+    "build": "rm -rf dist && npx rollup -c",
     "prepare": "npm i && npm run build",
     "dev": "rollup -cw",
     "prepublishOnly": "npm test",
